# CMakePP

./: CMakeLists.txt  README.md
cmake/: CMakePP.cmake  CMakePPVersion.cmake
cmake/CMakePP/: CPM.cmake  Project.cmake  Sanitizers.cmake  Targets.cmake  Templates.cmake  Testing.cmake  Warnings.cmake
